--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: Bharathi T (He/him)
+logo: /assets/img/Bharathipho.jpg
+description: Minimal is a theme for GitHub Pages
 show_downloads: true
 theme: jekyll-theme-minimal 
 
