--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bharathi T (He/him)
-logo: /assets/img/Bharathipho.jpg
+logo: Bharathipho.jpg
 description: Senior Research Fellow, IIT Palakkad.
 show_downloads: true
 theme: jekyll-theme-minimal 
