--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Bharathi T (He/him)
+title: Bharathi T
 logo: Bharathipho.jpg
 description: Senior Research Fellow, IIT Palakkad.
 show_downloads: true
