--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ title: Bharathi T
 logo: Bharathipho.jpg
 description: Senior Research Fellow, IIT Palakkad.
 show_downloads: true
-theme: jekyll-theme-minimal 
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 
 
