--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Bharathi T
+title: [Bharathi T]
 logo: Bharathipho.jpg
-description: Senior Research Fellow, IIT Palakkad.
+description: [Senior Research Fellow, IIT Palakkad]
 show_downloads: false
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
