--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,6 @@ title: [Bharathi T]
 logo: Bharathipho.jpg
 description: [Senior Research Fellow, IIT Palakkad]
 show_downloads: false
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-
+theme: jekyll-theme-cayman
 
 
