--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bharathi T
-logo: pho.png
+images: pho.png
 description: Senior Research Fellow, IIT Palakkad
 show_downloads: false
 theme: jekyll-theme-cayman
