--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Bharathi T
+title: Hi... I'm Bharathi Thiruvengadam...
 images: pho.png
-description: Senior Research Fellow, IIT Palakkad
+description: Welcome to My Homepage!!!
 show_downloads: false
 theme: jekyll-theme-cayman
 
