--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: Hi... I'm Bharathi Thiruvengadam...
 images: pho.png
 description: Welcome to My Homepage!!!
 show_downloads: false
-project page: false
+github:
+  is_project_page: false
 theme: jekyll-theme-cayman
 
 
