--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hi... I'm Bharathi Thiruvengadam...
-images: pho.png
+image: pho.png
 description: Welcome to My Homepage!!!
 show_downloads: false
 github:
