--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ theme: jekyll-theme-cayman
 
 navigation:
   - title: Home
-    url: /README
+    url: /
   - title: Bio
     url: /bio
   - title: Teaching
