--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hi... I'm Bharathi Thiruvengadam...
+title: Bharathi's Homepage 
 image: pho.png
 description: Welcome to My Homepage!!!
 show_downloads: false
