--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Bharathi's Homepage
 description: Welcome to My Homepage!!!
 show_downloads: false
 github:
-  is_project_page: false
+  is_project_page: true
 theme: jekyll-theme-cayman
 
 navigation:
