--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ theme: jekyll-theme-cayman
 
 navigation:
   - title: Home
-    url: /
+    url: /README
   - title: Bio
     url: /bio
   - title: Teaching
