--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,12 @@ header_pages:
   - about.md
   - contact.md
   - projects.md
+
+sass:
+  style: compressed
+
+markdown: kramdown
+
+# Link to the custom CSS file
+assets:
+  css: "style.css"
