--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bharathi's Homepage 
-description: Welcome to My Homepage!!!
+description: "Success is not a destination, it is a journey"
 show_downloads: false
 github:
   is_project_page: false
