--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ header_pages:
 sass:
   style: compressed
 
+markdown: kramdown
 
 # Link to the custom CSS file
- assets:
- css: "style.css"
+assets:
+  css: "style.css"
