--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,10 @@ theme: jekyll-theme-cayman
 
 header_pages:
  - about.md
- - index.md
+ - index.md 
+ - teaching.md
+ - event.md
+ - activities.md
 
 sass:
   style: compressed
