--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,14 @@ nav:
   - text: "Gallery"
     url: "/gallery" 
 
-    
+ header_pages:
+ - index.md
+ - about.md
+ - teaching.md
+ - research.md
+ - event.md
+ - activities.md
+ - gallery.md
 
 
 sass:
