--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: "Success is not a destination, it is a journey..."
 show_downloads: false
 github:
   is_project_page: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 
 header_pages:
  - index.md
