--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,13 @@ header_pages:
  - activities.md
  - gallery.md
 
-
+ <header class="page-header" role="banner">
+      {% if site.github.is_project_page %}
+        <a href="teaching" class="btn">Teaching</a>
+      {% endif %}
+      {% if site.show_downloads %}
+        <a href="index" class="btn">Home</a>
+        <a href="about" class="btn">About Me</a>
+      {% endif %}
+    </header>
 
