--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 title: Bharathi's Homepage 
 description: "Success is not a destination, it is a journey..."
-show_downloads: true
+show_downloads: false
+github:
+is_project_page: false
 google_analytics:
 theme: jekyll-theme-cayman
 
