--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ theme: jekyll-theme-cayman
 github_username:   bharathit.math
 
 header_pages:
- - index.md
+ - home.md
  - aboutme.md
  - teaching.md
  - research.md
