--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ theme: jekyll-theme-cayman
 github_username:   bharathit.math
 
 header_pages:
- - README.md
+ - index.md
  - aboutme.md
  - teaching.md
  - research.md
