--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,14 @@ github:
   is_project_page: false
 theme: jekyll-theme-cayman 
 github_username:   bharathit.math
+button:
+        text: Download CV
+        url: index
+
+
+
+
+
 
 header_pages:
  - index.md
